About page - English version

--- a/app/views/main/ua.html.erb
+++ b/app/views/main/ua.html.erb
@@ -12,19 +12,28 @@
 
   <div class="row g-5">
     <div class="col-md-6">
-      <h2>Мої проєкти <a href="/projects"><i class="bi bi-arrow-right-circle" style="font-size: 1.5rem;"></i></a></h2>
+      <h2>Мої проєкти <a href="/projects"><i class="bi bi-info-circle" style="font-size: 1.5rem;"></i></a></h2>
       <p>Дізнайтеся про мої персональні проєкти. Заходьте на репозиторії з відкритим кодом на GitHub.</p>
-      <ul class="icon-list">
-        <li><a href="https://github.com/university-my/ios" rel="noopener" target="_blank">My Universit</a> - iOS app with schedule for universities</li>
-        <li><a href="https://github.com/yura-voevodin/my-university-server-rails" rel="noopener" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="noopener" target="_blank">Rails</a> framework</li>
+      <ul style="list-style-type: none;">
+        <li>
+          <i class="bi bi-arrow-right-circle text-muted"></i>
+          <a href="https://github.com/university-my/ios" rel="noopener" target="_blank">My Universit</a> - iOS app with schedule for universities
+        </li>
+        <li>
+          <i class="bi bi-arrow-right-circle text-muted"></i>
+          <a href="https://github.com/yura-voevodin/my-university-server-rails" rel="noopener" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="noopener" target="_blank">Rails</a> framework
+        </li>
       </ul>
     </div>
 
     <div class="col-md-6">
-      <h2>Блог <a href="/blog"><i class="bi bi-arrow-right-circle" style="font-size: 1.5rem;"></i></a></h2>
+      <h2>Блог <a href="/blog"><i class="bi bi-info-circle" style="font-size: 1.5rem;"></i></a></h2>
       <p>Читайте мої статті для натхнення 😉</p>
-      <ul class="icon-list">
-        <li><a href="../getting-started/introduction/">Привіт!</a></li>
+      <ul style="list-style-type: none;">
+        <li>
+          <i class="bi bi-arrow-right-circle text-muted"></i>
+          <a href="../getting-started/introduction/">Привіт!</a>
+        </li>
       </ul>
     </div>
   </div>
