--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,106 +2,10 @@
 <%= render "layouts/header" %>
 
 <div class="col-lg-8 mx-auto p-3 py-md-5">
-<%= markdown(@markdown_text)  %>  
-</div>
 
-<div class="container py-4">
-    <div class="mx-3 my-3">
-
-
-
-        <div class="col-12 pt-3 mx-3">
-            <div class="Subhead-heading pb-1">Experience</div>
-
-            <div class="TimelineItem">
-                <div class="TimelineItem-badge">
-                </div>
-                <div class="TimelineItem-body">
-                    iOS Engineer at
-                    <a href="https://www.clowder.com" class="text-bold">Clowder</a>,
-                    2020 - now
-                </div>
-            </div>
-
-            <div class="TimelineItem">
-                <div class="TimelineItem-badge">
-                </div>
-                <div class="TimelineItem-body">
-                    iOS, iPadOS and macOS Apps Developer at
-                    <a href="https://www.appdev.academy" class="text-bold">App Dev Academy</a>,
-                    2016 - 2020
-                </div>
-            </div>
-
-            <div class="TimelineItem">
-                <div class="TimelineItem-badge">
-                </div>
-                <div class="TimelineItem-body">
-                    PHP Developer at
-                    <a href="https://bvblogic.com" class="text-bold">bvblogic</a>,
-                    2012 - 2016
-                </div>
-            </div>
-
-            <div class="TimelineItem">
-                <div class="TimelineItem-badge">
-                </div>
-                <div class="TimelineItem-body">
-                    Senior Laboratory at
-                    <a href="https://dl.sumdu.edu.ua/en" class="text-bold">Laboratory of distance learning at SSU</a>,
-                    2012 - 2013
-                </div>
-            </div>
-
-            <div class="TimelineItem">
-                <div class="TimelineItem-badge">
-                </div>
-                <div class="TimelineItem-body">
-                    Laboratory Technician at
-                    <a href="https://kpt.sumdu.edu.ua" class="text-bold">Polytechnic College of Konotop Institute of the SSU</a>,
-                    2007 - 2008
-                </div>
-            </div>
-
-            <div class="TimelineItem-break ml-0"></div>
-        </div>
-
-        <div class="col-12 pt-3 mx-3">
-            <div class="Subhead-heading pb-1">Education</div>
-
-            <div class="TimelineItem">
-                <div class="TimelineItem-badge">
-                </div>
-                <div class="TimelineItem-body">
-                    Bachelor of Computer Science at <a href="https://sumdu.edu.ua/int/en/" class="text-bold">Sumy State University</a>, 2012
-                </div>
-            </div>
-
-            <div class="TimelineItem">
-                <div class="TimelineItem-badge">
-                </div>
-                <div class="TimelineItem-body">
-                    Junior Specialist, Service of computer and intellectual systems and networks <br> at <a href="https://kpt.sumdu.edu.ua" class="text-bold">Polytechnic College of Konotop Institute of the SSU</a>, 2009
-                </div>
-            </div>
-
-            <div class="TimelineItem-break ml-0"></div>
-        </div>
-
-        <div class="col-12 pt-3 mx-3">
-            <div class="Subhead-heading pb-1">Contacts</div>
-            <div class="ml-3">
-                <ul>
-                    <li>LinkedIn <a href="https://www.linkedin.com/in/yurivoevodin/">yurivoevodin</a></li>
-                    <li>Upwork <a href="https://www.upwork.com/freelancers/~01f49c60721b71f48b">Yura V.</a></li>
-                    <li>Twitter <a href="https://twitter.com/voevodin_yura">@voevodin_yura</a></li>
-                    <li>Instagram <a href="https://www.instagram.com/voevodin.yura/">@voevodin.yura</a></li>
-                    <li>Facebook <a href="https://www.facebook.com/yura.voevodin">yura.voevodin</a></li>
-                    <li>Telegram <a href="https://t.me/voevodin_yura">@voevodin_yura</a></li>
-                    <li>Github <a href="https://github.com/yura-voevodin">yura-voevodin</a></li>
-                    <li>Mail me <a href="mailto:voevodin.yura@icloud.com">voevodin.yura@icloud.com</a></li>
-                </ul>
-            </div>
-        </div>
+    <div class="text-center mb-4">
+        <%= image_tag ("avatar.png"), class: "rounded", size: "200x200", alt: "Yura Voevodin" %>
     </div>
+
+    <%= markdown(@markdown_text)  %>  
 </div>
