Change About, Project pages
- New avatar
- Support Dark Theme
- New text for About page
- Projects page on markdown

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -3,8 +3,8 @@
 
 <div class="col-lg-8 mx-auto p-3 py-md-5">
 
-	<h1>👋 Hello! My name is Yura</h1>
-	<p class="fs-5 col-md-8">Experienced software engineer with strong background in web technologies. Focused on creating a products. Enthusiast and dreamer from Ukraine 🇺🇦</p>
+	<h1>👋 Hello! My name is Yura<span class="blinking-cursor">|</span></h1>
+	<p class="fs-5 col-md-8">Experienced <code>software engineer</code> with strong background in web technologies. Focused on creating a products. Enthusiast and dreamer from Ukraine 🇺🇦</p>
 
 	<div class="mb-5">
 		<a href="/about" class="btn btn-primary btn-lg">Read more</a>
