--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,86 @@
  */
 
 @import "bootstrap/scss/bootstrap";
+
+html {
+  color-scheme: light dark;
+}
+
+@media (prefers-color-scheme: dark) {
+
+    hr {
+        border-top: 1px solid #2c2c2c !important;
+    }
+    
+    body {
+        color: rgb(215, 215, 216);
+        background-color: rgb(0, 0, 0);
+    }
+    
+    a {
+        color: #fff;
+    }
+    a:hover {
+        color: rgb(216, 216, 216);
+    }
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    // background-color: #f8f9fa;
+  }
+}
+
+.blinking-cursor {
+    color: lightgreen;
+    -webkit-animation: 1s blink step-end infinite;
+    -moz-animation: 1s blink step-end infinite;
+    -ms-animation: 1s blink step-end infinite;
+    -o-animation: 1s blink step-end infinite;
+    animation: 1s blink step-end infinite;
+}
+
+@keyframes "blink" {
+    from, to {
+        color: transparent;
+    }
+    50% {
+        color: lightgreen;
+    }
+}
+
+@-moz-keyframes blink {
+    from, to {
+        color: transparent;
+    }
+    50% {
+        color: lightgreen;
+    }
+}
+
+@-webkit-keyframes "blink" {
+    from, to {
+        color: transparent;
+    }
+    50% {
+        color: lightgreen;
+    }
+}
+
+@-ms-keyframes "blink" {
+    from, to {
+        color: transparent;
+    }
+    50% {
+        color: lightgreen;
+    }
+}
+
+@-o-keyframes "blink" {
+    from, to {
+        color: transparent;
+    }
+    50% {
+        color: lightgreen;
+    }
+}
