--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,7 @@
     <ul class="nav nav-pills">
         <li class="nav-item"><%= link_to "Home", root_url, class: "nav-link #{ is_active('main')}" %></li>
         <li class="nav-item"><%= link_to "About", "about", class: "nav-link #{ is_active('about')}" %></li>
+        <li class="nav-item"><%= link_to "Projects", "projects", class: "nav-link #{ is_active('projects')}" %></li>
     </ul>
 </header>
 </div>
