--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,8 +4,10 @@
 <div class="col-lg-8 mx-auto p-3 py-md-5">
 
     <div class="text-center mb-4">
-        <%= image_tag ("avatar.png"), class: "rounded", size: "200x200", alt: "Yura Voevodin" %>
+        <%= image_tag ("avatar.jpeg"), class: "rounded", size: "200x200", alt: "Yura Voevodin" %>
     </div>
 
-    <%= markdown(@markdown_text)  %>  
+    <%= markdown(@markdown_text)  %>
+    
+    <%= render "layouts/footer" %>
 </div>
