About Me - Ukrainian version

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -3,31 +3,31 @@
 
 <div class="col-lg-8 mx-auto p-3 py-md-5">
 
-	<h1>👋 Hello! My name is Yura<span class="blinking-cursor">|</span></h1>
-	<p class="fs-5 col-md-8">Experienced <code>software engineer</code> with strong background in web technologies. Focused on creating a products. Enthusiast and dreamer from Ukraine 🇺🇦</p>
+    <h1>👋 Hello! My name is Yura<span class="blinking-cursor">|</span></h1>
+    <p class="fs-5 col-md-8">Experienced <code>software engineer</code> with strong background in web technologies. Focused on creating a products. Enthusiast and dreamer from Ukraine 🇺🇦</p>
 
-	<div class="mb-5">
-		<a href="/about" class="btn btn-primary btn-lg">Read more</a>
-	</div>
+    <div class="mb-5">
+        <a href="/about" class="btn btn-primary btn-lg">Read more</a>
+    </div>
 
-	<hr class="col-3 col-md-2 mb-5">
+    <hr class="col-3 col-md-2 mb-5">
 
-	<div class="row g-5">
-		<div class="col-md-8">
-			<h2>My projects <a href="/projects"><i class="bi bi-info-circle" style="font-size: 1.5rem;"></i></a></h2>
-			<p>Read about my personal projects. Check out open source repositiries on GitHub.</p>
-			<ul style="list-style-type: none;">
-				<li>
-					<i class="bi bi-arrow-right-circle text-muted"></i>
-					<a href="https://github.com/university-my/ios" rel="noopener" target="_blank">My Universit</a> - iOS app with schedule for universities
-				</li>
-				<li>
-					<i class="bi bi-arrow-right-circle text-muted"></i>
-					<a href="https://github.com/yura-voevodin/my-university-server-rails" rel="noopener" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="noopener" target="_blank">Rails</a> framework
-				</li>
-			</ul>
-		</div>
-	</div>
+    <div class="row g-5">
+        <div class="col-md-8">
+            <h2>My projects <a href="/projects"><i class="bi bi-info-circle" style="font-size: 1.5rem;"></i></a></h2>
+            <p>Read about my personal projects. Check out open source repositories on GitHub.</p>
+            <ul style="list-style-type: none;">
+                <li>
+                    <i class="bi bi-arrow-right-circle text-muted"></i>
+                    <a href="https://github.com/university-my/ios" rel="noopener" target="_blank">My Universit</a> - iOS app with schedule for universities
+                </li>
+                <li>
+                    <i class="bi bi-arrow-right-circle text-muted"></i>
+                    <a href="https://github.com/yura-voevodin/my-university-server-rails" rel="noopener" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="noopener" target="_blank">Rails</a> framework
+                </li>
+            </ul>
+        </div>
+    </div>
 
-	<%= render "layouts/footer" %>
+    <%= render "layouts/footer" %>
 </div>
