--- a/app/views/pages/about_ua.html.erb
+++ b/app/views/pages/about_ua.html.erb
@@ -1,56 +1,13 @@
-<div class="container-lg clearfix">
+<% @title = "Юра Воєводін - Про мене" %>
+<%= render "layouts/header_ua" %>
 
-  <div class="mx-3 my-3">
+<div class="col-lg-8 mx-auto p-3 py-md-5">
 
-    <div class="d-table col-12">
-      <div class="col-2 d-table-cell v-align-middle">
-        <%= image_tag ("avatar.png"), class: "width-full avatar" %>
-      </div>
-      <div class="col-10 d-table-cell v-align-middle pl-4">
-        <h1 class="lh-condensed mb-2">Юра Воєводін</h1>
-        <p class="h4 text-normal mb-2">Досвідчений розробник програмного забезпечення зі знаннями в області веб-технологій</p>
-        <p class="h4 text-normal mb-2">Ентузіаст та мрійник з <a href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0">України</a> 🇺🇦</p>
-      </div>
+    <div class="text-center mb-4">
+        <%= image_tag ("avatar.jpeg"), class: "rounded", size: "200x200", alt: ">Юра Воєводін" %>
     </div>
 
-    <div class="col-12 pt-3 mx-3">
-      <div class="Subhead">
-        <div class="Subhead-heading">Досвід</div>
-      </div>
-      <ul>
-        <li><a href="https://www.clowder.com">Clowder</a> - iOS Engineer, 2020 - до сьогодні</li>
-        <li><a href="https://www.appdev.academy">App Dev Academy</a> - Розробник застосунків для <a href="https://uk.wikipedia.org/wiki/IOS">iOS</a> та <a href="https://uk.wikipedia.org/wiki/MacOS_x">macOS</a>, 2016 - 2020</li>
-        <li><a href="http://bvblogic.com">bvblogic</a> - <a href="https://uk.wikipedia.org/wiki/PHP">PHP</a> розробник, 2012 - 2016</li>
-        <li><a href="http://dl.sumdu.edu.ua/uk/">Лабораторія дистанційного навчання Сумського державного університету</a> - Старший лаборант, 2012 - 2013</li>
-        <li><a href="http://kpt.sumdu.edu.ua/">Політехнічний технікум Конотопського інституту СумДУ</a> - Лаборант, 2007 - 2008</li>
-      </ul>
-    </div>
-
-    <div class="col-12 pt-3 mx-3">
-      <div class="Subhead">
-        <div class="Subhead-heading">Освіта</div>
-      </div>
-      <ul>
-        <li><a href="http://sumdu.edu.ua/ukr/">Сумський державний університет</a> - Інформатика, Бакалавр, 2012</li>
-        <li><a href="http://kpt.sumdu.edu.ua">Політехнічний технікум Конотопського інституту СумДУ</a> - Обслуговування комп'ютерних та інтелектуальних систем і мереж, <a href="https://uk.wikipedia.org/wiki/%D0%9C%D0%BE%D0%BB%D0%BE%D0%B4%D1%88%D0%B8%D0%B9_%D1%81%D0%BF%D0%B5%D1%86%D1%96%D0%B0%D0%BB%D1%96%D1%81%D1%82">Молодший спеціаліст</a>, 2009</li>
-      </ul>
-    </div>
-
-    <div class="col-12 pt-3 mx-3">
-      <div class="Subhead">
-        <div class="Subhead-heading">Контакти</div>
-      </div>
-      <ul>
-        <li>LinkedIn <a href="https://www.linkedin.com/in/yurivoevodin/">yurivoevodin</a></li>
-        <li>Upwork <a href="https://www.upwork.com/freelancers/~01f49c60721b71f48b">Yura V.</a></li>
-        <li>Twitter <a href="https://twitter.com/voevodin_yura">@voevodin_yura</a></li>
-        <li>Instagram <a href="https://www.instagram.com/voevodin.yura/">@voevodin.yura</a></li>
-        <li>Facebook <a href="https://www.facebook.com/yura.voevodin">yura.voevodin</a></li>
-        <li>Telegram <a href="https://t.me/voevodin_yura">@voevodin_yura</a></li>
-        <li>Github <a href="https://github.com/yura-voevodin">yura-voevodin</a></li>
-        <li>Пишіть мені <a href="mailto:voevodin.yura@icloud.com">voevodin.yura@icloud.com</a></li>
-      </ul>
-    </div>
-
-  </div>
+    <%= markdown(@markdown_text)  %>
+    
+    <%= render "layouts/footer" %>
 </div>
