--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
-  <header class="d-flex justify-content-center py-3">
-    <ul class="nav nav-pills">
-        <li class="nav-item"><%= link_to "Home", root_url, class: "nav-link #{ is_active('main')}" %></li>
-        <li class="nav-item"><%= link_to "About", "about", class: "nav-link #{ is_active('about')}" %></li>
-        <li class="nav-item"><%= link_to "Projects", "projects", class: "nav-link #{ is_active('projects')}" %></li>
-    </ul>
-</header>
+    <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+            <%= link_to root_url, rel: 'nofollow', class: "nav-link #{ is_active('main')}" do %>
+                <i class="bi bi-house-fill"></i>
+            <% end %>
+            <li class="nav-item"><%= link_to "Projects", "projects", class: "nav-link #{ is_active('projects')}" %></li>
+            <li class="nav-item"><%= link_to "About", "about", class: "nav-link #{ is_active('about')}" %></li>
+        </ul>
+    </header>
 </div>
