--- a/app/views/main/ua.html.erb
+++ b/app/views/main/ua.html.erb
@@ -1,8 +1,9 @@
 <% @title = "Юра Воєводін" %>
+<%= render "layouts/header_ua" %>
 
 <div class="col-lg-8 mx-auto p-3 py-md-5">
-  <h1>👋 Привіт! Мене звати Юра</h1>
-  <p class="fs-5 col-md-8">Досвідчений розробник програмного забезпечення зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
+  <h1>👋 Привіт! Мене звати Юра<span class="blinking-cursor">|</span></h1>
+  <p class="fs-5 col-md-8">Досвідчений <code>розробник програмного забезпечення</code> зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
 
   <div class="mb-5">
     <a href="/about" class="btn btn-primary btn-lg">Читати далі</a>
@@ -12,22 +13,7 @@
 
   <div class="row g-5">
     <div class="col-md-6">
-      <h2>Мої проєкти <a href="/projects"><i class="bi bi-info-circle" style="font-size: 1.5rem;"></i></a></h2>
-      <p>Дізнайтеся про мої персональні проєкти. Заходьте на репозиторії з відкритим кодом на GitHub.</p>
-      <ul style="list-style-type: none;">
-        <li>
-          <i class="bi bi-arrow-right-circle text-muted"></i>
-          <a href="https://github.com/university-my/ios" rel="noopener" target="_blank">My Universit</a> - iOS app with schedule for universities
-        </li>
-        <li>
-          <i class="bi bi-arrow-right-circle text-muted"></i>
-          <a href="https://github.com/yura-voevodin/my-university-server-rails" rel="noopener" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="noopener" target="_blank">Rails</a> framework
-        </li>
-      </ul>
-    </div>
-
-    <div class="col-md-6">
-      <h2>Блог <a href="/blog"><i class="bi bi-info-circle" style="font-size: 1.5rem;"></i></a></h2>
+      <h2>Блог</h2>
       <p>Читайте мої статті для натхнення 😉</p>
       <ul style="list-style-type: none;">
         <li>
