--- a/app/views/pages/about_ua.html.erb
+++ b/app/views/pages/about_ua.html.erb
@@ -4,7 +4,7 @@
 <div class="col-lg-8 mx-auto p-3 py-md-5">
 
     <div class="text-center mb-4">
-        <%= image_tag ("avatar.jpeg"), class: "rounded", size: "200x200", alt: ">Юра Воєводін" %>
+        <%= image_pack_tag 'avatar.jpeg', class: "rounded", size: "200x200", alt: ">Юра Воєводін" %>
     </div>
 
     <%= markdown(@markdown_text)  %>
