--- a/app/views/posts/about.html.erb
+++ b/app/views/posts/about.html.erb
@@ -3,7 +3,7 @@
   <div class="container mt-4">
     <div class="row">
       <div class="col-sm-3 text-center">
-        <%= image_tag ("avatar.png"), size: "150x150", class: "rounded" %>
+        <%= image_pack_tag 'avatar.png', size: "150x150", class: "rounded" %>
       </div>
       <div class="col-sm-9">
 		<h3><%=raw @post.title %></h3>
