--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,21 @@
   <meta name="description" content="<%= yield_meta_tag(:description, 'Yura Voevodin Personal Website') %>" />
 	<meta name="keywords" content="<%= yield_meta_tag(:keywords, 'iOS,iPadOS,macOS,tvOS,iPhone,iPad,iMac,MacBook,Developer,Swift') %>" />
 
+  <!-- For new browsers - multisize ico  -->
+  <link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="favicon.ico">
+  
+  <!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon-152-precomposed.png">
+  
+  <!-- For iPad with high-resolution Retina display running iOS ≤ 6: -->
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon-144-precomposed.png">
+  
+  <!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon-120-precomposed.png">
+  
+  <!-- For iPhone with high-resolution Retina display running iOS ≤ 6: -->
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon-114-precomposed.png">
+
   <title><%= @title %></title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
