Add score for ukrainian pages

--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -5,5 +5,9 @@
   <h1>👋 Привіт! Мене звати Юра<span class="blinking-cursor">|</span></h1>
   <p class="fs-5 col-md-8">Досвідчений <code>розробник програмного забезпечення</code> зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
 
+  <div class="mb-5">
+        <a href="/ua/about" class="btn btn-primary btn-lg">Детальніше</a>
+    </div>
+
   <%= render "layouts/footer" %>
 </div>
