--- a/app/views/layouts/_header_ua.html.erb
+++ b/app/views/layouts/_header_ua.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
       <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
-            <%= link_to "ua", rel: 'nofollow', class: "nav-link #{ is_active('ua')}" do %>
+            <%= link_to "/ua", rel: 'nofollow', class: "nav-link #{ is_active('index')}" do %>
                 <i class="bi bi-house-fill"></i>
             <% end %>
-            <li class="nav-item"><%= link_to "Про мене", "about_ua", class: "nav-link #{ is_active('about_ua')}" %></li>
+            <li class="nav-item"><%= link_to "Про мене", "/ua/about", class: "nav-link #{ is_active('about')}" %></li>
         </ul>
     </header>
 </div>
