Add first blog post

--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -1,4 +1,3 @@
-<% @title = "Юра Воєводін" %>
 <%= render "layouts/header_ua" %>
 
 <div class="col-lg-8 mx-auto p-3 py-md-5">
@@ -6,8 +5,21 @@
   <p class="fs-5 col-md-8">Досвідчений <code>розробник програмного забезпечення</code> зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
 
   <div class="mb-5">
-        <a href="/ua/about" class="btn btn-primary btn-lg">Детальніше</a>
+    <a href="/ua/about" class="btn btn-primary btn-lg">Детальніше</a>
+  </div>
+
+  <div class="row g-5">
+    <div class="col-md-6">
+      <h2>Блог</h2>
+      <p>Читайте мої статті для натхнення 😉</p>
+      <ul style="list-style-type: none;">
+        <li>
+          <i class="bi bi-arrow-right-circle text-muted"></i>
+          <a href="/ua/blog/feature">Привіт із майбутнього!</a>
+        </li>
+      </ul>
     </div>
+  </div>
 
   <%= render "layouts/footer" %>
 </div>
