Small adjustments in layout

--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Yura Voevodin - My Projects" %>
+<% @title = "Yura Voevodin - Personal Projects" %>
 <%= render "layouts/header" %>
 
 <div class="col-lg-8 mx-auto p-3 py-md-5">
