--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -1,11 +1,24 @@
 <% @title = "Yura Voevodin" %>
 <%= render "layouts/header" %>
 
-<div class="col-lg-8 mx-auto p-3 py-md-5">
-    <h1>👋 Hello! My name is Yura<span class="blinking-cursor">|</span></h1>
-    <p class="fs-5 col-md-8">Experienced <code>software engineer</code> with strong background in web technologies. Focused on creating a products. Enthusiast and dreamer from Ukraine 🇺🇦</p>
-    <div class="mb-5">
-        <a href="/about" class="btn btn-primary btn-lg">Read more</a>
+<div class="col-9 mx-auto py-md-5">
+
+    <div class="row mb-5">
+        <div class="col-sm-4 mb-4">
+            <%= image_pack_tag 'avatar.jpg', class: "rounded img-fluid", alt: "Yura Voevodin" %>
+        </div>
+
+        <div class="col">
+            <h1>👋 Hello! My name is Yura<span class="blinking-cursor">|</span></h1>
+            <p class="fs-4">Experienced <code>software engineer</code> with strong background in web technologies. Focused on creating a products. Enthusiast and dreamer from Ukraine 🇺🇦</p>
+        </div>
+
+        <hr>
     </div>
+
+    <div class="row fs-5">
+        <%= markdown(@markdown_text) %>    
+    </div>
+
     <%= render "layouts/footer" %>
 </div>
