--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -1,25 +1,39 @@
+<% @title = "Юра Воєводін" %>
 <%= render "layouts/header_ua" %>
 
-<div class="col-lg-8 mx-auto p-3 py-md-5">
-  <h1>👋 Привіт! Мене звати Юра<span class="blinking-cursor">|</span></h1>
-  <p class="fs-5 col-md-8">Досвідчений <code>розробник програмного забезпечення</code> зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
+<div class="col-9 mx-auto py-md-5">
 
-  <div class="mb-5">
-    <a href="/ua/about" class="btn btn-primary btn-lg">Детальніше</a>
-  </div>
+    <div class="row mb-5">
+        <div class="col-sm-4 mb-4">
+            <%= image_pack_tag 'avatar.jpg', class: "rounded img-fluid", alt: "Юра Воєводін" %>
+        </div>
 
-  <div class="row g-5">
-    <div class="col-md-6">
-      <h2>Блог</h2>
-      <p>Читайте мої статті для натхнення 😉</p>
-      <ul style="list-style-type: none;">
-        <li>
-          <i class="bi bi-arrow-right-circle text-muted"></i>
-          <a href="/ua/blog/feature">Привіт із майбутнього!</a>
-        </li>
+        <div class="col">
+            <h1>👋 Привіт! Мене звати Юра<span class="blinking-cursor">|</span></h1>
+            <p class="fs-4 col-md-8">Досвідчений <code>розробник програмного забезпечення</code> зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
+        </div>
+
+        <hr>
+    </div>
+
+    <div class="row fs-5">
+        <%= markdown(@markdown_text) %>
+        <hr class="col-3 col-md-2 mb-5">
+    </div>
+
+
+    <div class="row g-5 fs-5">
+        <div class="col-md-6">
+          <h2>✏️ Блог</h2>
+          <p>Читайте мої статті для натхнення 😉</p>
+          <ul style="list-style-type: none;">
+            <li>
+              <i class="bi bi-arrow-right-circle text-muted"></i>
+              <a href="/ua/blog/feature">Привіт із майбутнього!</a>
+          </li>
       </ul>
     </div>
-  </div>
+    </div>
 
-  <%= render "layouts/footer" %>
+    <%= render "layouts/footer" %>
 </div>
