--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -8,15 +8,34 @@
             <h1>🛠 Personal Projects</h1>
             <p class="fs-4">Here are the projects I'm working on:</p>
         </div>
-    </div>  
+    </div>
 
-    <div class="row fs-5">
+    <div class="row fs-5 p-3 bg-light border rounded-3">
 
-        <div class="col-sm-4 mb-4">
-            <%= image_pack_tag 'my-university.png', class: "rounded img-fluid" %>
+        <div class="col-sm-2">
+            <%= image_pack_tag 'my-university.png', class: "img-thumbnail" %>
         </div>
-        
-        <%= markdown(@markdown_text) %>    
+
+        <div class="col">
+            <h4>My University</h4>
+
+            <ul class="list-unstyled">
+                <li><p><a href="https://my-university.com.ua" rel="nofollow" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework</p></li>
+                <li><p><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058" rel="nofollow" target="_blank">iOS app</a> with schedule for universities</p></li>
+                <li><p><a href="https://play.google.com/store/apps/details?id=ua.com.myuniversity" rel="nofollow" target="_blank">Android app</a> with schedule for universities<br>
+                </p></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row fs-5 p-3 mt-4 text-white bg-dark rounded-3">
+        <div class="container-fluid py-3 px-3">
+            <h4>Personal  website</h4>
+
+            <ul class="list-unstyled">
+                <li><a href="https://voevodin-yura.com" rel="nofollow" target="_blank">voevodin-yura.com</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
+            </ul>
+        </div>
     </div>
 
     <%= render "layouts/footer" %>
