--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -3,37 +3,107 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row mb-5">
-        <div class="col-sm-4 mb-4">
-            <%= image_pack_tag 'avatar.jpg', class: "rounded img-fluid", alt: "Юра Воєводін" %>
-        </div>
+    <div class="row">
 
         <div class="col">
-            <h1>👋 Привіт! Мене звати Юра<span class="blinking-cursor">|</span></h1>
-            <p class="fs-4 col-md-8">Досвідчений <code>розробник програмного забезпечення</code> зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
+            <h1>👋 Привіт! Мене звати Юра</h1>
+            <p class="fs-4">Досвідчений <code class="badge bg-dark text-wrap">розробник програмного забезпечення<span class="blinking-cursor">|</span></code> зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
         </div>
 
-        <hr>
+        <div class="col-sm-3 mb-4">
+            <%= image_pack_tag 'avatar.jpg', class: "img-thumbnail", alt: "Юра Воєводін" %>
+        </div>
     </div>
 
-    <div class="row fs-5">
-        <%= markdown(@markdown_text) %>
-        <hr class="col-3 col-md-2 mb-5">
+    <div class="row fs-5 p-3 bg-light border rounded-3">
+        <div class="container-fluid py-3 px-3">
+
+            <ul class="list-unstyled">
+                <li>Я Юра Воєводін, з міста <a href="https://www.youtube.com/watch?v=qyMkAOd_Z9U" rel="nofollow" target="_blank">Суми, Україна</a>. Я радий, що ви знайшли час, щоб відвідати цей <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank">сайт</a></li>
+
+                <li>Я займаюся <code class="prettyprint">розробкою програмного забезпечення</code> та пишу код на мові програмування <code class="prettyprint">Swift</code>, в основному створюю додатки для iOS</li>
+                
+                <li>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Ruby On Rails</a> для <a href="/projects" rel="nofollow" target="_blank">власних проєктів</a></li>
+            </ul>
+
+            <p>Задавайте мені будь-які питання та стежте за мною в <a href="https://www.instagram.com/voevodin.yura" rel="nofollow" target="_blank">соціальних мережах</a></p>
+
+        </div>
     </div>
 
+    <div class="row fs-5 p-3 mt-4 text-white bg-dark rounded-3">
+        <div class="container-fluid py-3 px-3">
+            <h4>🚀 Досвід</h4>
 
-    <div class="row g-5 fs-5">
-        <div class="col-md-6">
-          <h2>✏️ Блог</h2>
-          <p>Читайте мої статті для натхнення 😉</p>
-          <ul style="list-style-type: none;">
+            <dl class="row mt-3">
+              <dt class="col-sm-3">2020 - до сьогодні</dt>
+              <dd class="col-sm-9">iOS Developer at <a href="https://www.clowder.com" rel="nofollow" target="_blank">Clowder</a></dd>
+
+              <dt class="col-sm-3">2020 - до сьогодні</dt>
+              <dd class="col-sm-9">iOS Developer at <a href="https://coachnow.io" rel="nofollow" target="_blank">CoachNow</a></dd>
+
+              <dt class="col-sm-3">2016 - 2020</dt>
+              <dd class="col-sm-9">Розробник застосунків для iOS, iPadOS та macOS в <a href="https://www.appdev.academy" rel="nofollow" target="_blank">App Dev Academy</a></dd>
+
+              <hr>
+
+              <dt class="col-sm-3">2012 - 2016</dt>
+              <dd class="col-sm-9">PHP розробник в <a href="https://bvblogic.com" rel="nofollow" target="_blank">bvblogic</a></dd>
+
+              <dt class="col-sm-3">2012 - 2013</dt>
+              <dd class="col-sm-9">Старший лаборант в <a href="https://dl.sumdu.edu.ua" rel="nofollow" target="_blank">Лабораторія дистанційного навчання Сумського державного університету</a></dd>
+
+              <dt class="col-sm-3">2007 - 2008</dt>
+              <dd class="col-sm-9">Лаборант в <a href="https://kpt.sumdu.edu.ua" rel="nofollow" target="_blank">Політехнічний технікум Конотопського інституту СумДУ</a></dd>
+          </dl>
+      </div>
+  </div>
+
+  <div class="row fs-5 p-3 mt-4 bg-light border rounded-3">
+    <div class="container-fluid py-3 px-3">
+        <h4>🎓 Освіта</h4>
+
+        <dl class="row mt-4">
+            <dt class="col-sm-3">2012</dt>
+            <dd class="col-sm-9">Бакалавр, Інформатика,  <a href="https://sumdu.edu.ua" rel="nofollow" target="_blank">Сумський державний університет</a></dd>
+        </dl>
+
+        <dl class="row">
+            <dt class="col-sm-3">2009</dt>
+            <dd class="col-sm-9">Молодший спеціаліст, Обслуговування комп'ютерних та інтелектуальних систем і мереж, <a href="https://kpt.sumdu.edu.ua" rel="nofollow" target="_blank">Політехнічний технікум Конотопського інституту СумДУ</a></dd>
+        </dl>
+    </div>
+</div>
+
+<div class="row fs-5 p-3 mt-4 text-white bg-dark rounded-3">
+    <div class="container-fluid py-3 px-3">
+        <h4>✉️ Контакти</h4>
+
+        <ul>
+            <li>Github <a href="https://github.com/yura-voevodin" rel="nofollow" target="_blank">yura-voevodin</a></li>
+            <li>Twitter <a href="https://twitter.com/voevodin_yura" rel="nofollow" target="_blank">@voevodin_yura</a></li>
+            <li>LinkedIn <a href="https://www.linkedin.com/in/yurivoevodin" rel="nofollow" target="_blank">yurivoevodin</a></li>
+            <li>Instagram <a href="https://www.instagram.com/voevodin.yura" rel="nofollow" target="_blank">@voevodin.yura</a></li>
+            <li>Facebook <a href="https://www.facebook.com/yura.voevodin" rel="nofollow" target="_blank">yura.voevodin</a></li>
+            <li>Telegram <a href="https://t.me/voevodin_yura" rel="nofollow" target="_blank">@voevodin_yura</a></li>
+            <li>Upwork <a href="https://www.upwork.com/freelancers/%7E01f49c60721b71f48b" rel="nofollow" target="_blank">Yura V.</a></li>
+            <li>Пишіть мені <a href="mailto:voevodin.yura@icloud.com" rel="nofollow" target="_blank">voevodin.yura@icloud.com</a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="row fs-5 p-3 mt-4 bg-light border rounded-3">
+    <div class="container-fluid py-3 px-3">
+        <h4>✏️ Блог</h4>
+        <p>Читайте мої статті для натхнення 😉</p>
+
+        <ul class="list-unstyled">
             <li>
               <i class="bi bi-arrow-right-circle text-muted"></i>
               <a href="/ua/blog/feature">Привіт із майбутнього!</a>
           </li>
-      </ul>
-    </div>
-    </div>
+      </div>
+  </div>
 
-    <%= render "layouts/footer" %>
+  <%= render "layouts/footer" %>
 </div>
