--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -5,7 +5,7 @@
 
     <div class="row mb-5">
         <div class="col">
-            <h1>🛠 Personal Projects</h1>
+            <h1>🛠 Personal</h1>
             <p class="fs-4">Here are the projects I'm working on:</p>
         </div>
     </div>
@@ -20,10 +20,9 @@
             <h4>My University</h4>
 
             <ul class="list-unstyled">
-                <li><p><a href="https://my-university.com.ua" rel="nofollow" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework</p></li>
-                <li><p><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058" rel="nofollow" target="_blank">iOS app</a> with schedule for universities</p></li>
-                <li><p><a href="https://play.google.com/store/apps/details?id=ua.com.myuniversity" rel="nofollow" target="_blank">Android app</a> with schedule for universities<br>
-                </p></li>
+                <li class="mb-2"><a href="https://my-university.com.ua" rel="nofollow" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework</li>
+                <li class="mb-2"><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058" rel="nofollow" target="_blank">iOS app</a> with schedule for universities</li>
+                <li class="mb-2"><a href="https://play.google.com/store/apps/details?id=ua.com.myuniversity" rel="nofollow" target="_blank">Android app</a> with schedule for universities</li>
             </ul>
         </div>
     </div>
