--- a/app/views/ua/blog/feature.html.erb
+++ b/app/views/ua/blog/feature.html.erb
@@ -1,4 +1,13 @@
-<%= render "layouts/header_ua" %>
+<div class="container">
+      <header class="d-flex justify-content-center py-3">
+        <ul class="nav nav-pills">
+            <%= link_to "/ua", rel: 'nofollow', class: "nav-link" do %>
+                <i class="bi bi-house-fill"></i>
+            <% end %>
+        </ul>
+    </header>
+</div>
+
 
 <div class="col-8 mx-auto p-3 py-md-5">
 
