Adjust size of the "My University" logo on the "Projects" page

--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -12,8 +12,8 @@
 
     <div class="row fs-5 p-3 bg-light border rounded-3">
 
-        <div class="col-sm-2">
-            <%= image_pack_tag 'my-university.png', class: "img-thumbnail" %>
+        <div class="col-sm-2 mb-2" style="max-height: 100px;">
+            <%= image_pack_tag 'my-university.png', class: "img-thumbnail h-100" %>
         </div>
 
         <div class="col">
