--- a/app/views/ua/projects.html.erb
+++ b/app/views/ua/projects.html.erb
@@ -2,16 +2,10 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row mb-5">
-        <div class="col">
-            <h1>🛠 Власні проєкти</h1>
-        </div>
-    </div>
-
     <div class="row fs-5 p-3 bg-light border rounded-3">
 
-        <div class="col-sm-2">
-            <%= image_pack_tag 'my-university.png', class: "img-thumbnail" %>
+        <div class="col-sm-2 mb-2" style="max-height: 100px;">
+            <%= image_pack_tag 'my-university.png', class: "img-thumbnail h-100" %>
         </div>
 
         <div class="col">
@@ -25,12 +19,12 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-4 text-white bg-dark rounded-3">
+    <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
         <div class="container-fluid py-3 px-3">
             <h4>Персональний веб-сайт</h4>
 
             <ul class="list-unstyled">
-                <li><a href="https://voevodin-yura.com" rel="nofollow" target="_blank">voevodin-yura.com</a>  - веб-сайт на <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> та <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a>  <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
+                <li><a href="https://voevodin-yura.com" rel="nofollow" target="_blank" class="link-info">voevodin-yura.com</a>  - веб-сайт на <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-info">Rails</a> та <a href="https://getbootstrap.com" rel="nofollow" target="_blank" class="link-info">Bootstrap</a>  <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank" class="link-info"><i class="bi bi-github"></i></a></li>
             </ul>
         </div>
     </div>
