New page - Personal (En)

--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Yura Voevodin - Personal Projects" %>
+<% @title = "Yura Voevodin - Projects" %>
 <%= render "layouts/header" %>
 
 <div class="col-9 mx-auto py-md-5">
