--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,10 @@
     <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
             <%= link_to root_url, rel: 'nofollow', class: "nav-link #{ is_active('main')}" do %>
-                <i class="bi bi-house-fill"></i>
+            <i class="bi bi-house-fill"></i>
             <% end %>
             <li class="nav-item"><%= link_to "Projects", "projects", class: "nav-link #{ is_active('projects')}" %></li>
+            <li class="nav-item"><%= link_to "Personal", "personal", class: "nav-link #{ is_active('personal')}" %></li>
         </ul>
     </header>
 </div>
