Personal page - adjustments in text

--- a/app/views/ua/personal.html.erb
+++ b/app/views/ua/personal.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Yura Voevodin - Personal" %>
+<% @title = "Юра Воєводін - Особисте" %>
 <%= render "layouts/header_ua" %>
 
 <div class="col-9 mx-auto py-md-5">
@@ -32,7 +32,7 @@
 
     <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
         <div class="col">
-            <h4>🍿 Деякі з моїх улюблених фільмів + серіали</h4>
+            <h4>🍿 Я дивлюся (фільми + серіали)</h4>
 
             <div class="row mt-4">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
@@ -79,7 +79,7 @@
 
     <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
         <div class="col">
-            <h4>📖 Деякі з моїх улюблених книг</h4>
+            <h4>📖 Я читаю</h4>
             <ul class="list-unstyled">
                 <li><a href="https://uk.wikipedia.org/wiki/Дюна_(франшиза)" rel="nofollow" target="_blank" class="link-info">Всесвіт Дюни</a></li>
 
@@ -90,7 +90,7 @@
 
     <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
         <div class="col">
-            <h4>🎮 Деякі з моїх улюблених ігр</h4>
+            <h4>🎮 Граю (iPad + Mac + PS5)</h4>
 
             <div class="row mt-4">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
