--- a/app/views/main/personal.html.erb
+++ b/app/views/main/personal.html.erb
@@ -32,7 +32,7 @@
 
     <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
         <div class="col">
-            <h4>🍿 Some of my favorite movies + TV series</h4>
+            <h4>🍿 I'm watching (movies + TV series)</h4>
 
             <div class="row mt-4">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
@@ -79,7 +79,7 @@
 
     <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
         <div class="col">
-            <h4>📖 Some of my favorite books</h4>
+            <h4>📖 I'm reading</h4>
             <ul class="list-unstyled">
                 <li><a href="https://en.wikipedia.org/wiki/Dune_(franchise)" rel="nofollow" target="_blank" class="link-info">Dune book series</a></li>
 
@@ -90,7 +90,7 @@
 
     <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
         <div class="col">
-            <h4>🎮 Some of my favorite games</h4>
+            <h4>🎮 I'm playing (iPad + Mac + PS5)</h4>
 
             <div class="row mt-4">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
