--- a/app/views/ua/personal.html.erb
+++ b/app/views/ua/personal.html.erb
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h4>🎮 Граю (iPad + Mac + PS5)</h4>
+                    <h4>🎮 Граю</h4>
                 </div>
 
                 <% @games.each do |game| %>
