Add alert with link to the Timeline page. Small fixes.

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -1,6 +1,15 @@
 <% @title = "Yura Voevodin" %>
 <%= render "layouts/header" %>
 
+<div class="row">
+    <div class="col-9 mx-auto">
+        <div class="alert alert-success d-flex align-items-center" role="alert">
+            <i class="bi bi-info-circle me-2"></i>
+            <div>Check out the new page - <%= link_to "Timeline", "timeline", class: "alert-link" %></div>
+        </div>
+    </div>    
+</div>
+
 <div class="col-9 mx-auto py-md-5">
 
     <div class="row">
